syntax = "proto3";

package  netmarks_bread;

option go_package = "NetMARKS/services/bread/proto";

service Bread {
  rpc Produce(Request) returns (Response) {}
}

message Request {
  uint64 quantity = 1;
  string response_size = 2;
}

message Response {
  uint64 quantity = 1;
  repeated Single items = 2;
}

message Single {
  string id = 1;
  string random_metadata = 2;
  string water_id = 3;
  string flour_id = 4;
}
